--- a/style.css
+++ b/style.css
@@ -1,5 +1,109 @@
-* {
-    margin: 0;
-    padding: 0%;
-    box-sizing: border-box;
+
+*{
+	padding: 0;
+	margin: 0;
+	border: 0;
 }
+*,*:before,*:after{
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+:focus,:active{outline: none;}
+a:focus,a:active{outline: none;}
+
+nav,footer,header,aside{display: block;}
+
+html,body{
+	height: 100%;
+	width: 100%;
+	font-size: 100%;
+	line-height: 1;
+	font-size: 18px;
+    font-family: Roboto;
+    font-weight: 500;
+	-ms-text-size-adjust: 100%;
+	-moz-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+}
+input,button,textarea{font-family:inherit;}
+
+input::-ms-clear{display: none;}
+button{cursor: pointer;}
+button::-moz-focus-inner {padding:0;border:0;}
+a, a:visited{text-decoration: none;}
+a:hover{text-decoration: none;}
+ul li{list-style: none;}
+img{vertical-align: top;}
+
+h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+/*------------*/
+.container {
+    width: 100%;
+    max-width: 1100px;
+    margin: 0 auto;
+}
+.container {
+    max-width: 1400px;
+    width: 60%;
+    margin: 0 auto;
+  }
+  .header_menu {
+    padding: 33px 0px;
+    border-bottom: 1px solid #828282;
+  }
+  .menu_list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .menu_link {
+    line-height: 22px;
+    color: #828282;
+  }
+  .menu_link:hover {
+    line-height: 22px;
+    color: #070707;
+  }
+  /*-------------------*/
+  .name {
+    text-align: center;
+    padding: 30px 0 40px;
+  }
+  .person_name {
+    font-size: 47.3392px;
+    line-height: 59px;
+    color: #070707;
+    font-weight: 700;
+  }
+  .person_study {
+    padding: 30px 0 0 0;
+    font-size: 18px;
+    line-height: 22px;
+    color: #070707;
+  }
+  .photo {
+    width: 100%;
+    height: 600px;
+  }
+  .container_background {
+    width: 100%;
+    background-color: #f6f6f6;
+  }
+  .heading_about_me {
+    padding: 120px 0 18px 0;
+    font-size: 34px;
+    line-height: 42px;
+    text-align: center;
+    color: #070707;
+  }
+  .all_history {
+    padding: 0 0 107px 0;
+  }
+  .story {
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+    color: #070707;
+    padding: 0 0 18px 0;
+  }
