--- a/style.css
+++ b/style.css
@@ -38,72 +38,146 @@ img{vertical-align: top;}
 
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 /*------------*/
-.container {
-    width: 100%;
-    max-width: 1100px;
-    margin: 0 auto;
-}
+
 .container {
     max-width: 1400px;
     width: 60%;
     margin: 0 auto;
-  }
-  .header_menu {
+}
+.header_menu {
     padding: 33px 0px;
     border-bottom: 1px solid #828282;
-  }
-  .menu_list {
+}
+.menu_list {
     display: flex;
     align-items: center;
     justify-content: space-between;
-  }
-  .menu_link {
+}
+.menu_link {
     line-height: 22px;
     color: #828282;
-  }
-  .menu_link:hover {
+}
+.menu_link:hover {
     line-height: 22px;
     color: #070707;
-  }
-  /*-------------------*/
-  .name {
+}
+/*-------------------*/
+.name {
     text-align: center;
     padding: 30px 0 40px;
-  }
-  .person_name {
+}
+.person_name {
     font-size: 47.3392px;
     line-height: 59px;
     color: #070707;
     font-weight: 700;
-  }
-  .person_study {
+}
+.person_study {
     padding: 30px 0 0 0;
     font-size: 18px;
     line-height: 22px;
     color: #070707;
-  }
-  .photo {
+}
+.photo {
     width: 100%;
     height: 600px;
-  }
-  .container_background {
+}
+/*---------------*/
+.container_background {
     width: 100%;
     background-color: #f6f6f6;
-  }
-  .heading_about_me {
+}
+.heading_about_me {
     padding: 120px 0 18px 0;
     font-size: 34px;
     line-height: 42px;
     text-align: center;
     color: #070707;
-  }
-  .all_history {
+}
+.all_history {
     padding: 0 0 107px 0;
-  }
-  .story {
+}
+.story {
     font-size: 18px;
     line-height: 22px;
     text-align: center;
     color: #070707;
     padding: 0 0 18px 0;
-  }
+}
+/*--------------------*/
+.heading {
+    padding: 91px 0 70px 0;
+    font-size: 34px;
+    line-height: 42px;
+    text-align: center;
+    color: #070707;
+}
+.icon_ability {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 0 100px 0;
+}
+.icon {
+      width: 200px;
+      height: 200px;
+}
+.name_icon {
+    padding: 28px 0 40px 0;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    color: #828282;
+}
+/*----------------*/
+ 
+.example {
+    padding: 0 0 91px 0;
+    font-size: 24px;
+    color: rgb(253, 1, 1);
+}
+/*----------------*/
+  
+.education_list {
+    position: relative;
+    text-align: center;
+    font-size: 20px;
+    line-height: 150%;
+    padding: 0 0 91px 0;
+}
+/*-----------------*/
+.english_story {
+    padding: 0 0 91px 0;
+    font-size: 20px;
+    text-align: center;
+}
+/*----------------*/
+.send_box {
+    width: 150px;
+    height: 42px;
+    background-color: black;
+    display: block;
+    margin: auto;
+    border-radius: 20px;
+    padding: 11px 13px 6px;
+}
+.post {
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+    color: #ffffff;
+}
+.social_icon {
+    padding: 91px 300px 45px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.icon_footer {
+    width: 150%;
+}
+.rs {
+    width: 10%;
+}
+
+
